# expense-tracker-rs

./: README.md
backend/: Cargo.toml  Config.toml  data.csv
backend/src/: database.rs  main.rs  utils.rs
backend/src/cli/: input.rs
backend/src/database/: category.rs  expense.rs  filter.rs  initialize.rs  user.rs
backend/src/utils/: args.rs  config.rs  export.rs  import.rs
backend/src/web/: error.rs  mod.rs
backend/src/web/endpoints/: category.rs  expense.rs  mod.rs  user.rs
datatypes/: Cargo.toml
datatypes/src/: category.rs  expense.rs  filter.rs  lib.rs  user.rs
expenses_backend/: Cargo.toml
expenses_backend/src/: lib.rs  utils.rs
expenses_backend/src/cli/: mod.rs
expenses_backend/src/database/: expense.rs  user.rs
expenses_backend/src/utils/: args.rs  config.rs
expenses_backend/src/web/: mod.rs
expenses_backend/src/web/endpoints/: user.rs
frontend/: endpoints.txt  index.html  package-lock.json  package.json  style.css  t.txt  tsconfig.json  webpack.config.js
frontend/app/: root.tsx
frontend/app/components/: expense.tsx
frontend/app/routes/: _index.tsx  expenses.tsx
frontend/app/utils/: models.tsx
frontend/src/: calculations.ts  datatypes.ts  index.ts  render.ts  utils.ts  vars.ts
frontend/ts/: datatypes.ts  scripts.ts  utils.ts
frontend_2/: package.json  start.txt
frontend_2/src/: calculations.ts  datatypes.ts  index.ts  render.ts  utils.ts
